--- a/src/SocketExample/TcpServer/TcpServerExapmle.csproj
+++ b/src/SocketExample/TcpServer/TcpServerExapmle.csproj
@@ -2,12 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\SocketExapmle\SocketCommon\SocketCommon.csproj" />
-    <ProjectReference Include="..\SocketCommon\SocketCommon.csproj" />
-  </ItemGroup>
 
 </Project>
