--- a/src/GrpcExample/Client/Client.csproj
+++ b/src/GrpcExample/Client/Client.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Grpc.Net.Client" Version="2.33.1" />
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="Grpc.Tools" Version="2.33.1" PrivateAssets="All" />
+    <!--<PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />-->
+    <PackageReference Include="Microsoft.Win32.Registry.AccessControl" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
