--- a/src/PrismCase/Case2/Case2.csproj
+++ b/src/PrismCase/Case2/Case2.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Update="Views\AllContent.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+
 </Project>
