--- a/src/AkkaCase/Akkademydb/AkkademydbClient/AkkademydbClient.csproj
+++ b/src/AkkaCase/Akkademydb/AkkademydbClient/AkkademydbClient.csproj
@@ -2,16 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
+	  <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.4.18" />
-    <PackageReference Include="Akka.Remote" Version="1.4.18" />
-    <PackageReference Include="Akka.Cluster" Version="1.4.18" />
-    <PackageReference Include="Akka.Cluster.Tools" Version="1.4.18" />
+    <PackageReference Include="Akka" Version="1.5.4" />
+    <PackageReference Include="Akka.Remote" Version="1.5.4" />
+    <PackageReference Include="Akka.Cluster" Version="1.5.4" />
+    <PackageReference Include="Akka.Cluster.Tools" Version="1.5.4" />
     <PackageReference Include="Akka.Logger.log4net" Version="1.3.1" />
-    <PackageReference Include="Akka.Serialization.Hyperion" Version="1.4.18" />
+    <PackageReference Include="Akka.Serialization.Hyperion" Version="1.5.4" />
   </ItemGroup>
 
   <ItemGroup>
