--- a/src/AkkaCase/Akkademydb/akkademy-db/akkademy-db.csproj
+++ b/src/AkkaCase/Akkademydb/akkademy-db/akkademy-db.csproj
@@ -1,17 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
+	  <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>akkademy_db</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.4.18" />
-    <PackageReference Include="Akka.Remote" Version="1.4.18" />
-    <PackageReference Include="Akka.Cluster" Version="1.4.18" />
-    <PackageReference Include="Akka.Cluster.Tools" Version="1.4.18" />
+    <PackageReference Include="Akka" Version="1.5.4" />
+    <PackageReference Include="Akka.Remote" Version="1.5.4" />
+    <PackageReference Include="Akka.Cluster" Version="1.5.4" />
+    <PackageReference Include="Akka.Cluster.Tools" Version="1.5.4" />
     <PackageReference Include="Akka.Logger.log4net" Version="1.3.1" />
-    <PackageReference Include="Akka.Serialization.Hyperion" Version="1.4.18" />
+    <PackageReference Include="Akka.Serialization.Hyperion" Version="1.5.4" />
   </ItemGroup>
   
 </Project>
