--- a/src/AkkaCase/Streams/StreamDemo/StreamDemo.csproj
+++ b/src/AkkaCase/Streams/StreamDemo/StreamDemo.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<TargetFramework>net7.0-windows</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Akka" Version="1.4.18" />
-    <PackageReference Include="Akka.Streams" Version="1.4.18" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Akka" Version="1.5.4" />
+		<PackageReference Include="Akka.Streams" Version="1.5.4" />
+		<PackageReference Include="Serilog" Version="2.12.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+	</ItemGroup>
 </Project>
